revert: "fix(html): remove too much spaces between icons"
This reverts commit 966d45a73da0e7407390cce4340cc529b7a1f0a6.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -35,7 +35,3 @@
 .carousel-projects {
     background-color: #f8f9fa !important;
 }
-
-.list-inline-item:not(:last-child) {
-    margin-right: 0.25rem;
-}
